# hemlock

./: .env  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.txt  app.json  app.py  auto_calibration_demo.ipynb  bandit.py  blackboard.ipynb  block.csv  compile_functions.py  config.py  cors.json  custom_compilers.py  data.csv  data.db  data.db-journal  data_storage.py  debug.py  demo.docx  env.yaml  environment.yml  gcloud_bucket.py  gcp_credentials.json  hemlock_shell.py  known_issues.py  local-requirements.txt  main.py  mkdocs.py  mkdocs.yml  mycsv.csv  navigate_functions.py  questions.py  (+17 more)
.ipynb_checkpoints/: auto_calibration_demo-checkpoint.ipynb  test-checkpoint.ipynb
docs/: 404.html  changelog.rst  conf.py  examples.rst  extensions.rst  getting_started.rst  index.html  index.rst  search.html  sitemap.xml
docs_md/: acknowledgements.md  app.md  bases.md  branch.md  changelog.md  check.md  checklist.md  choice.md  compile_functions.md  comprehension.md  contact.md  dashboard.md  debug.md  debug_functions.md  demographics.md  download.md  embedded.md  file.md  first_project.md  functions.md  index.md  input.md  input_group.md  label.md  lang.md  manifesto.md  navbar.md  page.md  participant.md  question.md  random.md  range.md  run_local.md  security.md  select.md  setup.md  setup_general.md  software.md  statics.md  submit_functions.md  (+9 more)
downloads/: Data.csv  Metadata.csv  StatusLog.csv
env/: gcp-credentials.json  local-env.yaml  local-env.yml  production-env.yaml  production-env.yml  production-scale.yaml  production-scale.yml
examples/: example_notebook.ipynb  navigation.ipynb  question_gallery.ipynb  requests.ipynb
hemlock/: __init__.py  comprehension_check.py  config.py  factory.py  participant_routes.py  query.py  randomize_tools.py  researcher_routes.py  restore_branch.py  routes.py
hemlock_crt/: __init__.py  crt.py  items.py
hemlock_nash/: __init__.py
hemlock_survey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hemlock_survey_dsbowen.egg-info/: PKG-INFO  SOURCES.txt
screenouts/: Screenouts_09162019.csv
static/: custom_js.js  external_js.js
survey_examples/: example1.py  example2.py  example3.py  example4.py
templates/: default_loading.html  default_survey.html  default_view.html  keypress.js  (+1 more)
(+523 files in other folders)
