[metadata]
name = hemlock
version = 1.0.0
author = Dillon Bowen
author_email = dsbowen@wharton.upenn.edu
description = A software development kit for creating online surveys and experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dsbowen.gitlab.io/hemlock
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    IPython
    flask
    flask-login
    flask-socketio
    flask-sqlalchemy
    markdown
    matplotlib
    networkx
    pandas
    sqlalchemy-mutable >= 1.0.2

[options.packages.find]
where = src

[build_sphinx]
project = Hemlock
copyright = 2021, Dillon Bowen
release = 1.0.0
source-dir = docs

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Ignore error messages
    raise AssertionError
    raise NotImplementedError

    # Ignore un-runnable code
    if TYPE_CHECKING:
    if 0:
    if __name__ == "__main__":
omit = 
    tests/*
    venv/*

[mypy]
ignore_missing_imports = True
